--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = vim/vim.symlink/bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
 	ignore = dirty
+[submodule "vim/vim.symlink/bundle/command-t"]
+	path = vim/vim.symlink/bundle/command-t
+	url = git://git.wincent.com/command-t.git
