--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = vim/vim.symlink/bundle/command-t
 	url = git://git.wincent.com/command-t.git
 	ignore = dirty
+[submodule "vim/vim.symlink/bundle/ack.vim"]
+	path = vim/vim.symlink/bundle/ack.vim
+	url = http://github.com/mileszs/ack.vim.git
