--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = vim/vim.symlink/bundle/tabular
 	url = https://github.com/godlygeek/tabular.git
 	ignore = dirty
+[submodule "vim/vim.symlink/bundle/vim-powerline"]
+	path = vim/vim.symlink/bundle/vim-powerline
+	url = https://github.com/Lokaltog/vim-powerline.git
