Add misc changes.

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ hook*
 python/virtualenvs.symlink/trello1/
 python/virtualenvs.symlink/hook.log
 python/virtualenvs.symlink/hook.log.1
+python/virtualenvs.symlink/
 
 
